# CoreLab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
agent/: README.md  pyproject.toml
agent/corelab_agent/: __init__.py  __main__.py  account_scanner.py  authorized_keys.py  capabilities.py  compliance_monitor.py  config.py  gpu_collector.py  grace_tracker.py  linux_users.py  logging_setup.py  mock_mode.py  pam_handler.py  policy_cache.py  policy_handlers.py  process_killer.py  reverse_cache.py  script_runner.py  ssh_verifier.py  violations.py  ws_client.py
agent/tests/: test_account_scanner.py  test_authorized_keys.py  test_config.py  test_gpu_collector.py  test_linux_users.py  test_logging_redaction.py  test_pam_handler.py  test_phase8_caches.py  test_phase8_compliance_monitor.py  test_phase8_policy_handlers.py  test_phase9_violation_push.py  test_process_killer.py  test_script_runner.py  test_ssh_verifier.py  test_ws_client.py
agent/tests/fixtures/: mock-config.toml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260604_1f9ee929f685_phase_3_server_enrollment_gpu_telemetry.py  20260604_2b7efc3460f6_fix_ssh_fingerprint_length_to_50.py  20260604_68e16808e68d_phase_4_physical_accounts_account_links.py  20260604_d00f5df9d2ff_phase_2_identity_tables.py  20260604_ff9621ab430d_phase_5_reservation_table.py  20260605_0e7c5d3a2f9b_phase_7_script_dispatch_started_at.py  20260605_3f1a8e92cd64_phase_7_notification_table.py  20260605_4a8d2c9f1e7b_phase_8_agent_policy.py  20260605_5b9e3d8c2f4a_phase_8_alert_event.py  20260605_6c3f4a8d9e2b_phase_9_threshold_value_json.py  20260605_7d4e5f8c2a1b_phase_9_alert_event_type_64.py  20260605_8c52e7af1d3a_phase_6_reservation_script_status.py  20260605_8e5c2f9a3d1b_phase_9_account_link_revoke_reason_check.py  20260607_9a7b3c2d1e0f_phase_j_gpu_id_nullable.py  20260609_ab12cd34ef56_phase_m_lab_public_urls.py  20260612_bc23de45fa67_pa_last_seen_at.py  20260704_c4d5e6f7a8b9_script_log_tail.py  20260704_d5e6f7a8b9c0_audit_log_immutable_triggers.py  20260705_e6f7a8b9c0d1_registration_invites.py
backend/corelab_backend/: __init__.py  auth_dependencies.py  cache.py  config.py  db.py  logging_setup.py  main.py  security.py
backend/corelab_backend/api/: __init__.py  agent_ws.py  health.py  ws_user.py
backend/corelab_backend/middleware/: __init__.py  rate_limit.py
backend/corelab_backend/models/: __init__.py  account_link.py  account_link_request.py  agent_capability.py  agent_policy.py  alert_event.py  audit_log.py  authorized_key_entry.py  base.py  enrollment_token.py  gpu.py  lab.py  notification.py  physical_account.py  registration_invite.py  reservation.py  server.py  server_admin_grant.py  setup_token.py  ssh_public_key.py  user.py
backend/corelab_backend/schemas/: __init__.py  _utc.py  account_link.py  auth.py  physical_account.py  reservation.py  server.py  setup.py  ssh_key.py  user.py
backend/corelab_backend/services/: __init__.py  _serializable_retry.py  account_link_request_service.py  account_link_service.py  agent_hub.py  agent_policy_service.py  agent_rpc.py  agent_url_broadcast.py  alert_service.py  audit_service.py  auth_service.py  capability_sync_service.py  compliance_ingest_service.py  gpu_broker.py  lab_url_scheduler.py  lab_url_service.py  link_cache_sync_service.py  notification_service.py  physical_account_service.py  policy_sync_service.py  reservation_scheduler.py  reservation_service.py  schedule_recommender.py  script_lifecycle_service.py  server_service.py  setup_service.py  ssh_challenge.py  ssh_key_helpers.py  ssh_key_service.py  telemetry_service.py  usage_service.py  user_service.py
backend/tests/: conftest.py  test_account_link_service.py  test_agent_rpc.py  test_audit_log_db_immutability_integration.py  test_audit_log_db_immutability_static.py  test_concurrency_cluster_a.py  test_health.py  test_lab_url_service.py  test_logging_redaction.py  test_phase2_integration.py  test_phase3_agent_ws.py  test_phase6_state_machine.py  test_phase7_dispatch_watchdog.py  test_phase7_gpu_broker.py  test_phase7_link_prepared.py  test_phase7_notification.py  test_phase7_notifications_api.py  test_phase7_scheduler_stress.py  test_phase7_usage.py  test_phase7_ws_user.py  test_phase8_agent_policy.py  test_phase8_alert_event.py  test_phase8_capability_policy.py  test_phase8_policy_api.py  test_phase8_protocol_frames.py  test_phase8_serializable_retry.py  test_phase8_sync_services.py  test_phase9_audit_api.py  test_phase9_compliance_violation.py  test_phase9_rate_limit.py  test_phase9_threshold_json.py  test_phase9_upgraded_to_verified.py  test_reservation_service.py  test_script_log_api_unit.py  test_server_enrollment_trust.py  test_ssh_challenge.py  test_static_asset_hygiene.py  test_telemetry_write_resilience.py
deploy/: .env.example  (+7 more)
shared/protocol/: README.md  pyproject.toml
shared/protocol/corelab_protocol/: __init__.py  frames.py
(+145 files in other folders)
