[project]
name = "corelab-agent"
version = "0.0.0"
description = "CoreLab on-server agent — WSS client, telemetry, RPC executor, script runner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CoreLab contributors" }]
dependencies = [
    "websockets>=13,<17",
    "pydantic>=2.7,<3",
    "structlog>=24.4,<25",
    "corelab-protocol",
    # Linux-only PAM bindings used by pam.verify RPC handler. Marker
    # keeps the macOS dev environment installable — Mac runs in
    # mock_mode and skips the real authenticate call.
    "pamela>=1.1,<2; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corelab_agent"]

[project.scripts]
corelab-agent = "corelab_agent.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "mypy>=1.11",
    "ruff>=0.8.4",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pamela"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
