[project]
name = "corelab-backend"
version = "0.0.0"
description = "CoreLab FastAPI backend — REST + WS hub, agent gateway, scheduler."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CoreLab contributors" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncmy>=0.2.9,<1",
    # asyncmy + MySQL 8 default caching_sha2_password auth requires cryptography.
    "cryptography>=43,<46",
    "alembic>=1.13,<2",
    "redis>=5.0,<6",
    "structlog>=24.4,<25",
    # Phase 2: password hashing + JWT issuance (docs/04-security.md §6.1 / §6.2)
    "bcrypt>=4.0,<5",
    "pyjwt>=2.8,<3",
    # Phase 6: 30 s reservation_tick job runs the status state machine
    # (docs/02 §5.13). APScheduler is the SSOT for periodic jobs — Phase 7
    # notifications and Phase 8 compliance monitor will reuse the same
    # AsyncIOScheduler instance. Major version pinned so 4.x breaking
    # changes do not silently roll in.
    "apscheduler>=3.10,<4",
    # Phase M v5 — async HTTP client for lab.public_urls reachability
    # probe scheduler (services/lab_url_service.py probe_one).
    "httpx>=0.27,<1",
    "corelab-protocol",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corelab_backend"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "httpx>=0.27,<1",
    "mypy>=1.11",
    "ruff>=0.8.4",
    # Sync MySQL driver — only used by Phase 3 WS integration test for
    # pre-test DB wipe + post-test DB inspect (TestClient is sync).
    "pymysql>=1.1,<2",
    # Phase 4 FU-12: in-process uvicorn fixture + real ws client so
    # backend WS tests bypass the sync-TestClient event-loop mismatch.
    # Already installed transitively via uvicorn[standard] — declared
    # here so the import is intentional rather than incidental.
    "websockets>=13,<17",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncmy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# APScheduler ships no py.typed marker as of 3.11.x. Only the
# AsyncIOScheduler class is touched, in services/reservation_scheduler.py.
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
