[project]
name = "corelab-protocol"
version = "0.0.0"
description = "Shared pydantic schema for CoreLab backend ↔ agent WSS protocol."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CoreLab contributors" }]
dependencies = [
    "pydantic>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corelab_protocol"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.8.4",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
